kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: homework
  template:
    metadata:
      labels:
        app: homework
    spec:
      containers:
      - name: web-server
        image: python:3.11-slim
        command: ['python3', '-m', 'http.server', '8000', '--directory', '/homework']
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 2 
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: html-data
          mountPath: /homework
        lifecycle:
          preStop:
            exec:
              command: ['rm', '-f', '/homework/index.html']

      volumes:
      - name: html-data
        emptyDir: {}
