kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
  namespace: homework
spec:
  selector:
    app: homework
  ports:
    protocol: TCP
    port: 8080
    targetPort: 8000
  type: ClusterIP
