kubernetes-networks/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homework-otus-route
  namespace: homework
spec:
  parentRefs:
    - name: homework-http-gateway
      namespace: homework
  hostnames:
     - "homework.otus"
  rules:
    - matches:
        - path:
            type: Exact
            value: /homepage
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /index.html
      backendRefs:
        - name: homework-service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homework-service
          port: 8080
